--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,18 @@
-<div>
+<div class="row d-flex justify-content-center mt-5">
+    <div class="col-sm-6 col-md-4">
+        <figure class="figure">
+            <img class="figure-img img-fluid" src="/images/beer.png" alt="">
+        </figure>
+    </div>
+</div>
 
+<div class="row mb-3">
+    <div class="col-md-2 offset-5 text-center">
+        <a class="btn btn-primary" role="button" href="/beers">Check the beers</a>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-2 offset-5 text-center">
+        <a class="btn btn-primary" role="button" href="/random-beer">Check a random beer</a>
+    </div>
 </div>
